# Vulkan-OBJ-Voxelizer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
shaders/: compile.sh
shaders/src/: compute.comp
src/: ComputeApp.cpp  ComputeApp.hpp  main.cpp
src/Boza/: App.cpp  App.hpp  Buffer.cpp  Buffer.hpp  CommandPool.cpp  CommandPool.hpp  ComputeShader.cpp  ComputeShader.hpp  Device.cpp  Device.hpp  Image3D.cpp  Image3D.hpp  Instance.cpp  Instance.hpp  Logger.cpp  Logger.hpp  TriangleLoader.cpp  TriangleLoader.hpp  check.hpp  macros.hpp  pch.hpp
